initial commit of hw7, binary_heap

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ HW3/GCS/GCS.xcodeproj/
 HW3/Inversions/Inversions.xcodeproj/
 HW5/dp_bridges/dp_bridges.xcodeproj/
 HW6/huffmancode/huffmancode.xcodeproj/
+HW7/bin_heap/bin_heap.xcodeproj/
