--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,4 @@ HW3/GCS/GCS.xcodeproj/
 HW3/Inversions/Inversions.xcodeproj/
 HW5/dp_bridges/dp_bridges.xcodeproj/
 HW6/huffmancode/huffmancode.xcodeproj/
-HW7/a-star/a-star.xcodeproj/
+HW7/dijkstras-algorithm/dijkstras-algorithm.xcodeproj/
